[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_map/game_map01.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game_stage.gd" type="Script" id=4]
[ext_resource path="res://assets/light2d_cone.png" type="Texture" id=5]
[ext_resource path="res://assets/light2d_circle.png" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[node name="game_stage" type="Node2D"]
script = ExtResource( 4 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="game_map01" parent="Navigation2D" instance=ExtResource( 3 )]
collision_mask = 5
bake_navigation = true

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 318, 287 )
speed = 300.0

[node name="Light2D_shadow" type="Light2D" parent="player"]
light_mask = 65536
position = Vector2( 10, 2 )
texture = ExtResource( 5 )
offset = Vector2( 260, 0 )
energy = 0.7
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D_visibility" type="Light2D" parent="player"]
light_mask = 32768
position = Vector2( -78, 0 )
scale = Vector2( 0.295494, 0.284271 )
texture = ExtResource( 6 )
offset = Vector2( 260, 0 )
mode = 2
range_item_cull_mask = 33
__meta__ = {
"_edit_lock_": true
}

[node name="enemy" parent="." instance=ExtResource( 2 )]
position = Vector2( 548, 170 )
player_spot_range = 400
bulletSpeed = 500

[node name="UI" type="CanvasLayer" parent="."]

[node name="scoreText" type="Label" parent="UI"]
margin_left = 39.0
margin_top = 46.0
margin_right = 84.0
margin_bottom = 60.0
text = "score:"
uppercase = true

[node name="value" type="Label" parent="UI/scoreText"]
margin_left = 47.0
margin_top = 1.0
margin_right = 87.0
margin_bottom = 15.0
text = "0"

[node name="lives_leftText" type="Label" parent="UI"]
margin_left = 909.0
margin_top = 50.0
margin_right = 979.0
margin_bottom = 64.0
text = "lives left:"
uppercase = true

[node name="value" type="Label" parent="UI/lives_leftText"]
margin_left = 74.0
margin_right = 114.0
margin_bottom = 14.0
text = "0"

[node name="game_overText" type="Label" parent="UI"]
margin_left = 481.0
margin_top = 280.0
margin_right = 567.0
margin_bottom = 294.0
theme = SubResource( 1 )
text = "-game over-"
uppercase = true

[node name="restartButton" type="Button" parent="UI"]
margin_left = 502.0
margin_top = 7.0
margin_right = 514.0
margin_bottom = 27.0
text = "RESTART"

[node name="BG" type="Sprite" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[connection signal="on_player_damaged" from="player" to="." method="_on_player_on_player_damaged"]
[connection signal="died" from="enemy" to="." method="_on_enemy_died"]
[connection signal="button_down" from="UI/restartButton" to="." method="_on_restartButton_button_down"]
